--- a/src/app/cars-form/cars-form.component.html
+++ b/src/app/cars-form/cars-form.component.html
@@ -1,14 +1,14 @@
 <div class="form-group">
   <label for="car-name">Car name</label>
 
-  <input type="text" class="form-control" id="car-name" placeholder="Car Name">
+  <input type="text" [(ngModel)]="carName" class="form-control" id="car-name" placeholder="Car Name">
 </div>
 
 <div class="form-group">
   <label for="car-model">Car model</label>
 
-  <input type="text" class="form-control" id="car-model" placeholder="Car Model">
+  <input type="text" [(ngModel)]="carModel" class="form-control" id="car-model" placeholder="Car Model">
 </div>
 
-<button type="button" class="btn btn-outline-primary">Add Car</button>
-<button type="button" class="btn btn-outline-warning">Load Cars</button>
+<button type="button" class="btn btn-outline-primary" (click)="onAdd()">Add Car</button>
+<button type="button" class="btn btn-outline-warning" (click)="onLoad()">Load Cars</button>
