NGRX-3: delete car with state

--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -7,7 +7,7 @@
 
   <p class="mb-1">{{car.model}}</p>
 
-  <button type="button" class="btn btn-danger btn-sm" (click)="onDelete()">Delete</button>
+  <button type="button" class="btn btn-danger btn-sm" (click)="onDelete(car)">Delete</button>
   <button type="button" class="btn btn-success btn-sm" [disabled]="car.isSold" (click)="onBuy()">Buy</button>
 </div>
 
